feat: Add mass scan progress bar, standardize telemetry, and update research docs

--- a/field_notes/research.html
+++ b/field_notes/research.html
@@ -136,6 +136,12 @@
                         <td>Achieved 80% VRAM reduction on RTX 2080 Ti for 14B+ model capability.</td>
                         <td><span class="impact-badge impact-stable">Stable</span></td>
                     </tr>
+                    <tr>
+                        <td>Unified Diffs (Patching)</td>
+                        <td>Robust Agentic Editing: Moving away from "Chopstick Coding" string replacement.</td>
+                        <td><code>patch_file</code> tool in Archive Node for granular, collision-aware workspace updates.</td>
+                        <td><span class="impact-badge impact-live">Live</span></td>
+                    </tr>
                 </tbody>
             </table>
         </section>
@@ -143,6 +149,11 @@
         <section id="roadmap" style="margin-top: 60px;">
             <h2 class="section-title">The Next Horizon</h2>
             
+            <div class="roadmap-item">
+                <div class="roadmap-title">Observational Memory (State-Based RAG)</div>
+                <div class="roadmap-desc">Transitioning from retrieval-augmented lookup to a persistent "World Model" of the Lab's state and career history.</div>
+            </div>
+
             <div class="roadmap-item">
                 <div class="roadmap-title">TTT-Discover (RL-based Autonomous Validation)</div>
                 <div class="roadmap-desc">Implementing reinforcement learning to autonomously discover the fastest path to silicon failure states within the archive.</div>
