--- a/field_notes/intercom.html
+++ b/field_notes/intercom.html
@@ -13,7 +13,7 @@
         #console-row {
             display: flex;
             gap: 15px;
-            height: 40%;
+            height: 25%;
         }
         .console-panel {
             flex: 1;
@@ -40,6 +40,7 @@
             padding: 10px;
             border: 1px solid #333;
             border-radius: 4px;
+            order: 3; /* Move to bottom */
         }
         #text-input {
             flex-grow: 1;
@@ -60,6 +61,7 @@
             flex-direction: column;
             box-shadow: inset 5px 0 10px rgba(0,0,0,0.5);
             overflow: hidden;
+            height: 60%;
         }
         #workspace-header {
             background: #1a1a1a;
@@ -78,6 +80,7 @@
         .editor-toolbar i { color: #888 !important; }
         .editor-toolbar a.active, .editor-toolbar a:hover { background: #333; border-color: #444; }
         .CodeMirror { background: #111; color: #ccc; border-color: #333; font-family: 'Courier New', Courier, monospace; }
+        .CodeMirror-cursor { border-left: 2px solid #fff !important; }
         .editor-statusbar { color: #555; }
 
         #filing-cabinet { margin-top: 20px; border-top: 1px solid #222; padding-top: 15px; }
