docs: Apollo 11 VRAM test verified and Resizable UI implemented

--- a/field_notes/intercom.html
+++ b/field_notes/intercom.html
@@ -131,6 +131,8 @@
             </div>
         </div>
 
+        <div id="resizer" style="height: 8px; background: #222; cursor: row-resize; border-top: 1px solid #333; border-bottom: 1px solid #333;"></div>
+
         <div id="workspace-container">
             <div id="workspace-header" style="display: flex; justify-content: space-between; align-items: center;">
                 <div style="display: flex; gap: 15px; align-items: center;">
