docs: Reconcile Portfolio and Field Notes with Llama-3.2-3B
STRATEGY: Purge Mistral-7B legacy branding and technical dissonances from the portfolio.

REASONING:
- ACCURACY: Updated all front-facing banners (timeline.html, grafana.html) and READMEs to reflect the active Unity Pattern.
- FIDELITY: Refined synthesis logic descriptions (Librarian/Nibbler) to match Llama-3.2's sub-token sampling and high-density abstract generation.
- HISTORY: Documented the 'Resurrection' shift in RETROSPECTIVE_FEB_15_2026.md, preserving the learning of why the 7B-to-3B move was architecturally necessary.

--- a/field_notes/timeline.html
+++ b/field_notes/timeline.html
@@ -29,7 +29,7 @@
             <h2 style="color: var(--heading-color); border-bottom: 1px solid var(--border-color); padding-bottom: 10px;">/home/jason/career_history</h2>
             
             <div class="disclaimer-box">
-                <span style="color: var(--accent-color); font-weight: bold;">[DATA ORIGIN]</span> 18 years of raw engineering logs, synthesized by local AI (Mistral-7B). 
+                <span style="color: var(--accent-color); font-weight: bold;">[DATA ORIGIN]</span> 18 years of raw engineering logs, synthesized by local AI (Llama-3.2-3B). 
                 <br><span style="color: #888; font-size: 0.8em;">Note: Automated classification may contain artifacts. Reviewing logs via the terminal interface below.</span>
                 <div id="pinky-status" style="margin-top: 10px; font-size: 0.85em; color: #aaa; border-top: 1px solid #333; padding-top: 10px; line-height: 1.4;">
                     <div style="display: flex; gap: 20px; flex-wrap: wrap;">
