docs: Finalize February 15 Validation Retrospectives
- Added RETROSPECTIVE_FINAL_SWEEP_FEB_15.md.
- Updated 00_MASTER_INDEX.md with consolidated validation pedigree.

--- a/field_notes/intercom.html
+++ b/field_notes/intercom.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Intercom - Acme Lab</title>
-    <link rel="stylesheet" href="style.css?v=7.0">
+    <link rel="stylesheet" href="style.css?v=b00f6a9e">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
     <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
     <style>
@@ -159,7 +159,7 @@
         </div>
     </main>
 
-    <script src="intercom_v2.js?v=3.6.4"></script>
-    <script src="mission-control.js"></script>
+    <script src="intercom_v2.js?v=7bf3c8cc"></script>
+    <script src="mission-control.js?v=bd431d08"></script>
 </body>
 </html>
