docs: Map FEAT-019 Health Realism

--- a/field_notes/status.html
+++ b/field_notes/status.html
@@ -144,6 +144,7 @@
                 <div class="telemetry-tabs" id="panel-tabs">
                     <button class="telemetry-tab active" onclick="updatePanel(6, this)">POWER</button>
                     <button class="telemetry-tab" onclick="updatePanel(8, this)">VRAM</button>
+                    <button class="telemetry-tab" onclick="updatePanel(10, this)">NETWORK</button>
                     <button class="telemetry-tab" onclick="updatePanel(2, this)">LOAD</button>
                     <button class="telemetry-tab" onclick="updatePanel(4, this)">TEMP</button>
                 </div>
