docs: Synchronize research ledger with Feb 19 silicon data

--- a/field_notes/research.html
+++ b/field_notes/research.html
@@ -142,6 +142,18 @@
                         <td><code>patch_file</code> tool in Archive Node for granular, collision-aware workspace updates.</td>
                         <td><span class="impact-badge impact-live">Live</span></td>
                     </tr>
+                    <tr>
+                        <td>Absolute Zero Purification</td>
+                        <td>Silicon Vacancy Protocol: SECURING 100% vacant hardware for low-level driver initialization.</td>
+                        <td>Physical erasure of <code>.ko.zst</code> modules to break OS-level circular dependency loops.</td>
+                        <td><span class="impact-badge impact-stable">Stable</span></td>
+                    </tr>
+                    <tr>
+                        <td>Turing Deadlock Analysis</td>
+                        <td>Hardware instruction mismatch: BF16 tensors deadlocking UVM on Compute 7.5 silicon.</td>
+                        <td>Characterized 333MiB "Zombie State" across 4 engines; standardizing on Ollama Unity Pattern.</td>
+                        <td><span class="impact-badge impact-stable">Final</span></td>
+                    </tr>
                 </tbody>
             </table>
         </section>
@@ -160,8 +172,8 @@
             </div>
 
             <div class="roadmap-item">
-                <div class="roadmap-title">vLLM / PagedAttention Integration</div>
-                <div class="roadmap-desc">Transitioning from Ollama to vLLM for high-throughput serving and Virtual KV Cache management.</div>
+                <div class="roadmap-title">vLLM / PagedAttention Integration (Future Hardware)</div>
+                <div class="roadmap-desc">High-throughput multi-LoRA serving. Blocked on Turing silicon; verified for future RTX 3090/4090 Ampere+ upgrades.</div>
             </div>
 
             <div class="roadmap-item">
