fix: restore 100% high-fidelity technical content via forward-porting approach

--- a/field_notes/stories.html
+++ b/field_notes/stories.html
@@ -122,8 +122,9 @@
             </article>
         </section>
 
+
         <!-- VALIDATION METHODOLOGY -->
-        <section id="methodology">
+        <section id="validation">
             <h2 class="section-title">Validation Methodology</h2>
 
             <article id="reading-robot">
@@ -172,16 +173,28 @@
 
             <article id="curl-postman">
                 <h3>Curl over Postman</h3>
-                <div class="meta">Tag: Philosophy | Impact: Efficiency</div>
-                <p>I prefer raw tools. Postman is pretty, but `curl` is scriptable, repeatable, and lives in the terminal. If you can’t debug your API with a one-liner, you don't really own the protocol.</p>
+                <div class="meta">Tag: Tooling | Impact: Reproducibility</div>
+                <p>I prefer Curl over Postman for the same reason I prefer text over screenshots - design tests for reproducibility ease - compartmentalize into a series of batchable steps - essential for bug reports.</p>
             </article>
 
             <article id="venv-glue">
                 <h3>Venv is like Hot Glue</h3>
-                <div class="meta">Tag: Operations | Impact: Isolation</div>
-                <p>Python virtual environments are the "Hot Glue" of modern validation. They allow you to stick together disparate tools without ruining your underlying system. I enforce a strict "One Tool, One Venv" policy to prevent dependency drift.</p>
+                <div class="meta">Tag: Tooling | Impact: Standardization</div>
+                <p>Venv is like hot glue - a stop gap solution that becomes standard - docker feels the same - has better utility these days.</p>
             </article>
         </section>
+
+        <!-- FUTURE WORK -->
+        <section id="future-work">
+            <h2 class="section-title">Future Work (WIP)</h2>
+            <ul class="tbd-list">
+                <li>[WIP] Polling RAPL Telemetry during stress - Defensive coding in recovery scripts</li>
+                <li>[WIP] Rolling window diff - Comparing BIOS logs</li>
+                <li>[WIP] DRA for enabling power transient measurements without a harness</li>
+                <li>[WIP] Meshtastic hobby (LoRa, 3d printing, ESP32 firmware)</li>
+            </ul>
+        </section>
+
 
         <!-- SECURITY & YIELD -->
         <section id="security">
@@ -282,8 +295,9 @@
 
             <article id="general-thoughts">
                 <h3>General Thoughts & Philosophy</h3>
-                <div class="meta">Tag: Philosophy | Impact: Engineering Culture</div>
-                <ul class="phil-list">
+                <div class="meta">Tag: Philosophy</div>
+                <ul>
+                    <li><strong>The "Class 1" Assumption:</strong> It’s a dangerous assumption to code for an end user—modal dialogue boxes, frameworks—assuming code will remain on top. Frameworks should be viewed as debuggers for internal libraries.</li>
                     <li><strong>Content is King:</strong> Automation is Queen but Content is King. This mantra focused our team. Don't let frameworks overshadow actually getting things done.</li>
                     <li><strong>Can AI Really Think?</strong> Question needs to shift from 'can it think?' to ‘Can thoughts live on paper?’ Yes. Language is the single most important invention created by humanity.</li>
                     <li><strong>2 and 7 Year Cycles:</strong> Roughly every 7 years I reinvent myself. Projects tend to finish by two years.</li>
@@ -292,15 +306,6 @@
                     <li><strong>Lab Viking:</strong> The final stage is a Lab Viking, your job is to pillage, the lab is your oyster.</li>
                     <li><strong>Communication:</strong> Don't reply hot, or on mobile, voice is best.</li>
                 </ul>
-            </article>
-        </section>
-
-        <!-- FUTURE WORK -->
-        <section id="future">
-            <h2 class="section-title">The Horizon</h2>
-            <article id="future-work">
-                <h3>WIP Items</h3>
-                <p>Current research focus: Multi-agent consensus for silicon error reproduction. Using RL to find the fastest path to a "Hang" state.</p>
             </article>
         </section>
 
