--- a/field_notes/timeline.html
+++ b/field_notes/timeline.html
@@ -291,7 +291,7 @@
                 }
                 
                 const isDiamond = e.rank >= 4;
-                const prefix = isDiamond ? "💎 " : "";
+                const prefix = "";
                 
                 if (dateDisplay !== lastDate) {
                     buffer += `\n[${dateDisplay}] ${prefix}${e.summary}\n`;
